--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>count on me ♪</title>
+<title>Para a minha querida filha</title>
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600;700&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
 :root{--y:#F5A623;--ink:#1A1008;--w:#FFFEF5;--red:#E8312A;--coral:#F5622D;--green:#27AE60;--blue:#2980B9;}
