--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ const STOPS = [
                <circle cx="167" cy="70" r="11" fill="#F0C060"/>
              </svg>
              <div class="cat-msg">YEEEEES!! 🎉</div>
-             <div class="cat-sub">sabia que ia aceitar 💛<br>te amo demais, filha.</div>
+             <div class="cat-sub">sabia que ia aceitar 💛<br>te amo demais, Ovuvuevuevue Enyetuenwuevue Ogbemugbem Osas.</div>
            </div>`,
     btn: ``
   },
